--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,12 @@
     <link href="assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link href="assets/css/style.css" rel="stylesheet">
+
     <!-- You can change the theme colors from here -->
-    <link href="assets/css/colors/default-dark.css" id="theme" rel="stylesheet">
+
+    <!-- <link href="assets/css/colors/default-dark.css" id="theme" rel="stylesheet"> -->
+    <link id="theme" rel="stylesheet">
+
 </head>
 
 <body class="fix-header card-no-border fix-sidebar">
@@ -42,6 +46,7 @@
     <!--stickey kit -->
     <script src="assets/plugins/sticky-kit-master/dist/sticky-kit.min.js"></script>
     <script src="assets/plugins/sparkline/jquery.sparkline.min.js"></script>
+
     <!--Custom JavaScript -->
     <script src="assets/js/custom.min.js"></script>
 </body>
